expand section and icon alignment fixes

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -249,7 +249,7 @@
 
 				> span {
 					display: inline-block;
-					padding: 5px 6px;
+					padding: 5px 5px;
 					color: @text-color-subtle;
 					transition: transform 0.1s;
 				}
